--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9"
+# daptools installed via wheel in container
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
