--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9"
+flask = "^2.3.0"
 # daptools installed via wheel in container
 
 [tool.poetry.group.dev.dependencies]
